<resources>
    <string name="app_name">TwoDicePig</string>
    <string name="start_game">Start Game</string>
    <string name="options">Options</string>
    <string name="two_dice_pig">Two-Dice Pig</string>
    <string name="logo">Logo</string>
    <string name="title_activity_game">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="roll">Roll</string>
    <string name="hold">Hold</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="placeholder">placeHolder</string>
    <string name="_0">0</string>
    <string name="dice_1_image">Dice 1 image</string>
    <string name="dice2image">dice2Image</string>
    <string name="turn_score_0">Turn Score: 0</string>
</resources>