<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeOverlay.TwoDicePig.FullscreenContainer"
    tools:context=".GameActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textColor="?attr/fullscreenTextColor"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CAEFFF"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="101dp"
            android:layout_height="87dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/linearLayout2"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/player2Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="8dp"
                android:text="@string/player_2"
                android:textColor="#FFB1B1"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/player2Score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="8dp"
                android:text="@string/_0"
                android:textColor="#FFB1B1"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <Button
            android:id="@+id/rollButton"
            android:layout_width="144dp"
            android:layout_height="77dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#FFB1B1"
            android:text="@string/roll"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/holdButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/holdButton"
            android:layout_width="144dp"
            android:layout_height="77dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#FFB1B1"
            android:text="@string/hold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/rollButton" />

        <TextView
            android:id="@+id/currentPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:textColor="#FFB1B1"
            android:textSize="36sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="101dp"
            android:layout_height="87dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias=".8"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/player1Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="8dp"
                android:text="@string/player_1"
                android:textColor="#FFB1B1"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/player1Score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:text="@string/_0"
                android:textColor="#FFB1B1"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/dice1Image"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:layout_marginTop="49dp"
            android:contentDescription="@string/dice_1_image"
            app:layout_constraintEnd_toStartOf="@+id/dice2Image"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currentPlayer"
            app:srcCompat="@drawable/diceone" />

        <ImageView
            android:id="@+id/dice2Image"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:layout_marginTop="49dp"
            android:contentDescription="@string/dice2image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/dice1Image"
            app:layout_constraintTop_toBottomOf="@+id/currentPlayer"
            app:srcCompat="@drawable/diceone" />

        <TextView
            android:id="@+id/turnScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:text="@string/turn_score_0"
            android:textColor="#FFB1B1"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/currentPlayer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>